// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Terminal should add css class shake-horizontal when error props is equal true 1`] = `
<form
  className="Terminal shake-horizontal"
>
  <div
    className="display"
  >
    <Connect(Output) />
    <p
      className="input"
    />
  </div>
  <div
    className="keyboard"
  >
    <div
      className="row"
    >
      <button
        className="btn"
        data-name="parenthesisOpen"
        data-value="("
        onClick={[Function]}
        title="parenthesis opening"
        type="button"
      >
        (
      </button>
      <button
        className="btn"
        data-name="parenthesisClose"
        data-value=")"
        onClick={[Function]}
        title="parenthesis closing"
        type="button"
      >
        )
      </button>
      <button
        className="btn"
        data-name="delete"
        onClick={[Function]}
        title="delete"
        type="button"
      >
        &lt;
      </button>
      <button
        className="btn"
        data-name="clear"
        onClick={[Function]}
        title="clear"
        type="button"
      >
        c
      </button>
    </div>
    <div
      className="row"
    >
      <button
        className="btn"
        data-name="number1"
        data-value="1"
        onClick={[Function]}
        title="number 1"
        type="button"
      >
        1
      </button>
      <button
        className="btn"
        data-name="number2"
        data-value="2"
        onClick={[Function]}
        title="number 2"
        type="button"
      >
        2
      </button>
      <button
        className="btn"
        data-name="number3"
        data-value="3"
        onClick={[Function]}
        title="number 3"
        type="button"
      >
        3
      </button>
      <button
        className="btn"
        data-name="addition"
        data-value="+"
        onClick={[Function]}
        title="plus"
        type="button"
      >
        +
      </button>
    </div>
    <div
      className="row"
    >
      <button
        className="btn"
        data-name="number4"
        data-value="4"
        onClick={[Function]}
        title="number 4"
        type="button"
      >
        4
      </button>
      <button
        className="btn"
        data-name="number5"
        data-value="5"
        onClick={[Function]}
        title="number 5"
        type="button"
      >
        5
      </button>
      <button
        className="btn"
        data-name="number6"
        data-value="6"
        onClick={[Function]}
        title="number 6"
        type="button"
      >
        6
      </button>
      <button
        className="btn"
        data-name="subtraction"
        data-value="-"
        onClick={[Function]}
        title="minus"
        type="button"
      >
        −
      </button>
    </div>
    <div
      className="row"
    >
      <button
        className="btn"
        data-name="number7"
        data-value="7"
        onClick={[Function]}
        title="number 7"
        type="button"
      >
        7
      </button>
      <button
        className="btn"
        data-name="number8"
        data-value="8"
        onClick={[Function]}
        title="number 8"
        type="button"
      >
        8
      </button>
      <button
        className="btn"
        data-name="number9"
        data-value="9"
        onClick={[Function]}
        title="number 9"
        type="button"
      >
        9
      </button>
      <button
        className="btn"
        data-name="multiplication"
        data-value="×"
        onClick={[Function]}
        title="times"
        type="button"
      >
        ×
      </button>
    </div>
    <div
      className="row"
    >
      <button
        className="btn"
        data-name="dot"
        data-value="."
        onClick={[Function]}
        title="dot"
        type="button"
      >
        .
      </button>
      <button
        className="btn"
        data-name="number0"
        data-value="0"
        onClick={[Function]}
        title="number 0"
        type="button"
      >
        0
      </button>
      <button
        className="btn"
        data-name="equality"
        onClick={[Function]}
        title="equals"
        type="button"
      >
        =
      </button>
      <button
        className="btn"
        data-name="division"
        data-value="÷"
        onClick={[Function]}
        title="divided"
        type="button"
      >
        ÷
      </button>
    </div>
  </div>
</form>
`;

exports[`Terminal should make element with css class input empty when startNewCalc props is true 1`] = `
<form
  className="Terminal"
>
  <div
    className="display"
  >
    <Connect(Output) />
    <p
      className="input"
    />
  </div>
  <div
    className="keyboard"
  >
    <div
      className="row"
    >
      <button
        className="btn"
        data-name="parenthesisOpen"
        data-value="("
        onClick={[Function]}
        title="parenthesis opening"
        type="button"
      >
        (
      </button>
      <button
        className="btn"
        data-name="parenthesisClose"
        data-value=")"
        onClick={[Function]}
        title="parenthesis closing"
        type="button"
      >
        )
      </button>
      <button
        className="btn"
        data-name="delete"
        onClick={[Function]}
        title="delete"
        type="button"
      >
        &lt;
      </button>
      <button
        className="btn"
        data-name="clear"
        onClick={[Function]}
        title="clear"
        type="button"
      >
        c
      </button>
    </div>
    <div
      className="row"
    >
      <button
        className="btn"
        data-name="number1"
        data-value="1"
        onClick={[Function]}
        title="number 1"
        type="button"
      >
        1
      </button>
      <button
        className="btn"
        data-name="number2"
        data-value="2"
        onClick={[Function]}
        title="number 2"
        type="button"
      >
        2
      </button>
      <button
        className="btn"
        data-name="number3"
        data-value="3"
        onClick={[Function]}
        title="number 3"
        type="button"
      >
        3
      </button>
      <button
        className="btn"
        data-name="addition"
        data-value="+"
        onClick={[Function]}
        title="plus"
        type="button"
      >
        +
      </button>
    </div>
    <div
      className="row"
    >
      <button
        className="btn"
        data-name="number4"
        data-value="4"
        onClick={[Function]}
        title="number 4"
        type="button"
      >
        4
      </button>
      <button
        className="btn"
        data-name="number5"
        data-value="5"
        onClick={[Function]}
        title="number 5"
        type="button"
      >
        5
      </button>
      <button
        className="btn"
        data-name="number6"
        data-value="6"
        onClick={[Function]}
        title="number 6"
        type="button"
      >
        6
      </button>
      <button
        className="btn"
        data-name="subtraction"
        data-value="-"
        onClick={[Function]}
        title="minus"
        type="button"
      >
        −
      </button>
    </div>
    <div
      className="row"
    >
      <button
        className="btn"
        data-name="number7"
        data-value="7"
        onClick={[Function]}
        title="number 7"
        type="button"
      >
        7
      </button>
      <button
        className="btn"
        data-name="number8"
        data-value="8"
        onClick={[Function]}
        title="number 8"
        type="button"
      >
        8
      </button>
      <button
        className="btn"
        data-name="number9"
        data-value="9"
        onClick={[Function]}
        title="number 9"
        type="button"
      >
        9
      </button>
      <button
        className="btn"
        data-name="multiplication"
        data-value="×"
        onClick={[Function]}
        title="times"
        type="button"
      >
        ×
      </button>
    </div>
    <div
      className="row"
    >
      <button
        className="btn"
        data-name="dot"
        data-value="."
        onClick={[Function]}
        title="dot"
        type="button"
      >
        .
      </button>
      <button
        className="btn"
        data-name="number0"
        data-value="0"
        onClick={[Function]}
        title="number 0"
        type="button"
      >
        0
      </button>
      <button
        className="btn"
        data-name="equality"
        onClick={[Function]}
        title="equals"
        type="button"
      >
        =
      </button>
      <button
        className="btn"
        data-name="division"
        data-value="÷"
        onClick={[Function]}
        title="divided"
        type="button"
      >
        ÷
      </button>
    </div>
  </div>
</form>
`;

exports[`Terminal should render the value of formula into input class 1`] = `
<form
  className="Terminal"
>
  <div
    className="display"
  >
    <Connect(Output) />
    <p
      className="input"
    >
      123
    </p>
  </div>
  <div
    className="keyboard"
  >
    <div
      className="row"
    >
      <button
        className="btn"
        data-name="parenthesisOpen"
        data-value="("
        onClick={[Function]}
        title="parenthesis opening"
        type="button"
      >
        (
      </button>
      <button
        className="btn"
        data-name="parenthesisClose"
        data-value=")"
        onClick={[Function]}
        title="parenthesis closing"
        type="button"
      >
        )
      </button>
      <button
        className="btn"
        data-name="delete"
        onClick={[Function]}
        title="delete"
        type="button"
      >
        &lt;
      </button>
      <button
        className="btn"
        data-name="clear"
        onClick={[Function]}
        title="clear"
        type="button"
      >
        c
      </button>
    </div>
    <div
      className="row"
    >
      <button
        className="btn"
        data-name="number1"
        data-value="1"
        onClick={[Function]}
        title="number 1"
        type="button"
      >
        1
      </button>
      <button
        className="btn"
        data-name="number2"
        data-value="2"
        onClick={[Function]}
        title="number 2"
        type="button"
      >
        2
      </button>
      <button
        className="btn"
        data-name="number3"
        data-value="3"
        onClick={[Function]}
        title="number 3"
        type="button"
      >
        3
      </button>
      <button
        className="btn"
        data-name="addition"
        data-value="+"
        onClick={[Function]}
        title="plus"
        type="button"
      >
        +
      </button>
    </div>
    <div
      className="row"
    >
      <button
        className="btn"
        data-name="number4"
        data-value="4"
        onClick={[Function]}
        title="number 4"
        type="button"
      >
        4
      </button>
      <button
        className="btn"
        data-name="number5"
        data-value="5"
        onClick={[Function]}
        title="number 5"
        type="button"
      >
        5
      </button>
      <button
        className="btn"
        data-name="number6"
        data-value="6"
        onClick={[Function]}
        title="number 6"
        type="button"
      >
        6
      </button>
      <button
        className="btn"
        data-name="subtraction"
        data-value="-"
        onClick={[Function]}
        title="minus"
        type="button"
      >
        −
      </button>
    </div>
    <div
      className="row"
    >
      <button
        className="btn"
        data-name="number7"
        data-value="7"
        onClick={[Function]}
        title="number 7"
        type="button"
      >
        7
      </button>
      <button
        className="btn"
        data-name="number8"
        data-value="8"
        onClick={[Function]}
        title="number 8"
        type="button"
      >
        8
      </button>
      <button
        className="btn"
        data-name="number9"
        data-value="9"
        onClick={[Function]}
        title="number 9"
        type="button"
      >
        9
      </button>
      <button
        className="btn"
        data-name="multiplication"
        data-value="×"
        onClick={[Function]}
        title="times"
        type="button"
      >
        ×
      </button>
    </div>
    <div
      className="row"
    >
      <button
        className="btn"
        data-name="dot"
        data-value="."
        onClick={[Function]}
        title="dot"
        type="button"
      >
        .
      </button>
      <button
        className="btn"
        data-name="number0"
        data-value="0"
        onClick={[Function]}
        title="number 0"
        type="button"
      >
        0
      </button>
      <button
        className="btn"
        data-name="equality"
        onClick={[Function]}
        title="equals"
        type="button"
      >
        =
      </button>
      <button
        className="btn"
        data-name="division"
        data-value="÷"
        onClick={[Function]}
        title="divided"
        type="button"
      >
        ÷
      </button>
    </div>
  </div>
</form>
`;
